--- a/SherpaDesk/Error.xaml
+++ b/SherpaDesk/Error.xaml
@@ -8,10 +8,10 @@
     mc:Ignorable="d"
     VerticalAlignment="Center"
 	HorizontalAlignment="Center"
-    d:DesignHeight="100"
-    d:DesignWidth="680">
+    d:DesignHeight="200"
+    d:DesignWidth="500">
     <Border BorderBrush="#FFE6DB55" BorderThickness="2">
-        <Grid Background="#FFFFFBCC" Width="680">
+        <Grid Background="#FFFFFBCC" Width="500">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
@@ -19,11 +19,11 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="60" />
-                <RowDefinition Height="40" />
+                <RowDefinition Height="140" />
             </Grid.RowDefinitions>
-            <TextBlock Name="TitleText" Text="Internal Error" FontSize="30" Foreground="Red" VerticalAlignment="Bottom" Padding="30 0 30 0" Grid.Column="0"></TextBlock>
-            <TextBlock Name="MessageText" Text="Error Context" FontSize="20" TextWrapping="WrapWholeWords" Height="70" Foreground="#666452" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2"></TextBlock>
-            <Button Name="SendReport" Content="Send Error Report" ToolTipService.ToolTip="Send Report to support team" FontSize="16" BorderThickness="1" BorderBrush="Gray" Padding="10 0 10 0" Margin="0 0 0 0" Foreground="#633c16" Background="#f9d08b" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1" Click="SendReport_Click"/>
+            <TextBlock Name="TitleText" Text="Internal Error" FontSize="30" Foreground="Red" VerticalAlignment="Center" Padding="10 0 10 0" Grid.Column="0" HorizontalAlignment="Left"></TextBlock>
+            <TextBlock Name="MessageText" Text="Error Context" FontSize="20" TextWrapping="WrapWholeWords" Height="120" Foreground="#666452" VerticalAlignment="Center" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Margin="10 0 10 0"></TextBlock>
+            <Button Name="SendReport" Content="Send Error Report" ToolTipService.ToolTip="Send Report to support team" FontSize="16" BorderThickness="1" BorderBrush="Gray" Padding="10 0 10 0" Margin="10 0 10 0" Foreground="#633c16" Background="#f9d08b" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="0" Click="SendReport_Click"/>
             <Button Name="CloseError" ToolTipService.ToolTip="Close this notification" Grid.Row="0" Grid.Column="2" VerticalAlignment="Top" HorizontalAlignment="Right" Click="CloseError_Click">
                 <Button.Background>
                     <ImageBrush ImageSource="Assets/Close.png"/>
