--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -161,7 +161,7 @@
                 </telerikPrimitives:RadCustomHubTile.FrontContent>
             </telerikPrimitives:RadCustomHubTile>
         </Grid>
-        <Grid Grid.Column="1" Grid.Row="1" Margin="20,0,50,0" Width="auto">
+        <Grid Visibility="Collapsed" Grid.Column="1" Grid.Row="1" Margin="20,0,50,0" Width="auto">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
@@ -257,8 +257,12 @@
                     <TextBlock Grid.Column="6" Text="% Complete" FontSize="16" VerticalAlignment="Bottom" />
                     <TextBlock Grid.Column="8" Text="Billable" FontSize="16" VerticalAlignment="Bottom" />
                     <TextBlock Grid.Column="10" Text="Task Type " FontSize="16" VerticalAlignment="Bottom" />
-                    <telerikInput:RadTimePicker x:Name="StartTimePicker" Grid.Row="1" Width="130" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" />
-                    <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Row="1" Grid.Column="2" Width="130" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" />
+                    <Border Grid.Row="1" BorderThickness="2" BorderBrush="#e1e1e1" CornerRadius="5" Height="32" VerticalAlignment="Top" Margin="0,4,0,0">
+                        <telerikInput:RadTimePicker x:Name="StartTimePicker" BorderThickness="0" Width="130" HorizontalAlignment="Left" Margin="0,0,0,2" VerticalAlignment="Top" />
+                    </Border>
+                    <Border Grid.Row="1" Grid.Column="2" BorderThickness="2" BorderBrush="#e1e1e1" CornerRadius="5" Height="32" VerticalAlignment="Top" Margin="0,4,0,0">
+                        <telerikInput:RadTimePicker BorderThickness="0" x:Name="EndTimePicker" Grid.Row="1" Grid.Column="2" Width="130" HorizontalAlignment="Left" Margin="0,0,0,2" VerticalAlignment="Top" />
+                    </Border>
                     <TextBox x:Name="HoursTextBox" Margin="0,4,0,0" Height="20" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Grid.Row="1" TextWrapping="Wrap" Grid.Column="4" VerticalAlignment="Top" FontSize="16" FontWeight="Bold" Width="130" />
                     <TextBlock x:Name="ErrorHours" Grid.Column="4" HorizontalAlignment="Left" Margin="0 0 0 0" Grid.Row="1" Height="50" VerticalAlignment="Top"/>
                     <ComboBox Name="CompleteList" Grid.Column="6" Grid.Row="1" FontSize="16" HorizontalAlignment="Stretch" Margin="0,4,0,0" VerticalAlignment="Top">
