--- a/SherpaDesk/Timesheet.xaml
+++ b/SherpaDesk/Timesheet.xaml
@@ -109,17 +109,17 @@
                         <TextBlock HorizontalAlignment="Right" Grid.Row="0" Margin="10,5,0,5" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Date" VerticalAlignment="Center" FontSize="18"/>
                         <TextBlock x:Name="DateLabel" Grid.Column="2" FontSize="20" Margin="0,4,0,0" />
 
-                        <TextBlock HorizontalAlignment="Right" Grid.Row="1" Margin="10,5,0,5" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Center" FontSize="18"/>
-                        <ComboBox Name="TechnicianList" Grid.Column="2" Grid.Row="1" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="-10,-5,0,0" SelectionChanged="TechnicianList_SelectionChanged" RequestedTheme="Dark" />
+                        <TextBlock HorizontalAlignment="Right" Grid.Row="1" Margin="10,10,0,5" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Center" FontSize="18"/>
+                        <ComboBox Name="TechnicianList" Grid.Column="2" Grid.Row="1" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,5" SelectionChanged="TechnicianList_SelectionChanged" RequestedTheme="Dark" />
 
                         <TextBlock HorizontalAlignment="Right" Grid.Row="2" Margin="10,5,0,5" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Account" VerticalAlignment="Center" FontSize="18"/>
-                        <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="2" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="-10,-5,0,0" SelectionChanged="AccountList_SelectionChanged" RequestedTheme="Dark" />
+                        <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="2" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,5,0,5" SelectionChanged="AccountList_SelectionChanged" RequestedTheme="Dark" />
 
                         <TextBlock Name="ProjectLabel" HorizontalAlignment="Right" Grid.Row="3" Foreground="#8eb1bb" Margin="10,5,0,5" TextWrapping="Wrap" Text="Project" VerticalAlignment="Center" FontSize="18"/>
-                        <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="3" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="-10,-5,0,0" SelectionChanged="ProjectList_SelectionChanged" RequestedTheme="Dark" />
+                        <ComboBox Name="ProjectList" Grid.Column="2" Grid.Row="3" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,5,0,5" SelectionChanged="ProjectList_SelectionChanged" RequestedTheme="Dark" />
 
-                        <TextBlock Name="TaskTypeLabel" HorizontalAlignment="Right" Grid.Row="4" Foreground="#8eb1bb" Margin="0,5,0,5" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Center" FontSize="18"/>
-                        <ComboBox Name="TaskTypeList" Grid.Column="2" Grid.Row="4" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="-10,-5,0,0" RequestedTheme="Dark" />
+                        <TextBlock Name="TaskTypeLabel" HorizontalAlignment="Right" Grid.Row="4" Foreground="#8eb1bb" Margin="0,0,0,5" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Center" FontSize="18"/>
+                        <ComboBox Name="TaskTypeList" Grid.Column="2" Grid.Row="4" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,5,0,10" RequestedTheme="Dark" />
 
                         <TextBlock HorizontalAlignment="Right" Grid.Row="5" Margin="10,5,0,5" Foreground="#8eb1bb" TextWrapping="Wrap" Text="Billable" VerticalAlignment="Center" FontSize="18"/>
                         <CheckBox Name="BillableBox" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Column="2" Grid.Row="5" VerticalAlignment="Top" FontSize="20" IsChecked="True"/>
@@ -154,7 +154,7 @@
                         <TextBlock HorizontalAlignment="Right" Foreground="#8eb1bb" Grid.Row="9" Margin="10,5,0,5" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Center" FontSize="18" />
                         <TextBox x:Name="NoteTextBox" Margin="0,0,0,0" HorizontalAlignment="Stretch" Height="100" BorderBrush="#FFDEDEDE" InputScope="NumberFullWidth" Grid.Row="9" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" />
 
-                        <Button x:Name="SubmitButton" Style="{StaticResource SubmitButtonStyle}" Content="Save Time" Grid.Column="2" Foreground="White" HorizontalAlignment="Left" Margin="-3,14,0,0" Padding="0,0,0,0" Grid.Row="10" VerticalAlignment="Top" Height="50" Grid.RowSpan="2" Width="200" FontSize="24" Click="Button_Click" PointerEntered="SubmitButton_PointerEntered" PointerExited="SubmitButton_PointerExited" />
+                        <Button x:Name="SubmitButton" Style="{StaticResource SubmitButtonStyle}" Content="Save Time" Grid.Column="2" Foreground="White" HorizontalAlignment="Left" Margin="0,14,0,0" Padding="0,0,0,0" Grid.Row="10" VerticalAlignment="Top" Height="50" Grid.RowSpan="2" Width="200" FontSize="24" Click="Button_Click" PointerEntered="SubmitButton_PointerEntered" PointerExited="SubmitButton_PointerExited" />
                         <TextBlock Text="or" Grid.Column="2" Grid.Row="10" Grid.RowSpan="2" FontSize="24" VerticalAlignment="Center" Foreground="#85778f" Margin="215,15,0,0" />
                         <TextBlock x:Name="CancelButton" Grid.Column="2" Grid.Row="10" Grid.RowSpan="2" FontSize="24" VerticalAlignment="Center" Foreground="#85778f" Margin="250,15,147,0" Tapped="CancelButton_Tapped" PointerEntered="CancelButton_PointerEntered" PointerExited="CancelButton_PointerExited">
                         <Underline>
